# ThrackerZodd

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  SetCamExpo.sh  cmake_install.cmake
lib/: Finder.h  Images.h  Kalman.h  Points.h  Tracker.h
src/: main.cpp
