cmake_minimum_required(VERSION 2.8)
project(ThrackerZodd)
find_package(OpenCV REQUIRED)
set(NAME_SRC src/main.cpp)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(NAME_HEADERS lib/Finder.h lib/Images.h lib/Kalman.h lib/Points.h lib/Tracker.h)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/lib)
link_directories(${CMAKE_BINARY_DIR}/bin)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
add_executable(ThrackerZodd ${NAME_SRC} ${NAME_HEADERS})
target_link_libraries(ThrackerZodd ${OpenCV_LIBS})
